[project]
name = "aiomqtt-router"
version = "0.1.0"
description = "Graceful routing of aiomqtt subscriptions"
authors = [
    {name = "Matthew Badger", email = "matt@branchenergy.com"},
]
dependencies = [
    "aiomqtt>=2.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pytest>=8.2.1",
]
